cluster/apps/apps/windmill/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: windmill
  labels:
    # TODO: work out if this can be removed
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    kustomize.toolkit.fluxcd.io/prune: disabled
